# fastapi_hw

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
devops/: Dockerfile.back
devops/scripts/: run_backend.sh
src/backend/: .env.example  pyproject.toml
src/backend/application/: auth_service.py  task_service.py  user_service.py
src/backend/common/: exceptions.py  logs.py
src/backend/domain/entities/: auth.py  rest.py  task.py  user.py
src/backend/domain/repositories/: task.py  user.py
src/backend/domain/services/: auth.py  task.py  user.py
src/backend/infrastructure/: config.py
src/backend/infrastructure/container/: __init__.py  database.py  repositories.py  services.py
src/backend/infrastructure/psql/: __init__.py  alembic.ini  db.py
src/backend/infrastructure/psql/alembic/: env.py  script.py.mako
src/backend/infrastructure/psql/alembic/versions/: 2026-03-25-01-59-3ae91dbaa608_init.py
src/backend/infrastructure/psql/models/: __init__.py  task.py  user.py
src/backend/infrastructure/psql/repositories/: task.py  user.py
src/backend/infrastructure/web/: app.py
src/backend/infrastructure/web/api/: dependencies.py
src/backend/infrastructure/web/api/api_v1/: api.py
src/backend/infrastructure/web/api/api_v1/endpoints/: auth.py  task.py  user.py
src/backend/infrastructure/web/templates/: index.html
