[project]
name = "fastapi-hw"
version = "0.1.0"
description = "Task management API for HSE course"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "dependency-injector>=4.48.3",
    "pydantic-settings>=2.13.1",
    "fastapi>=0.135.2",
    "sqlalchemy>=2.0.48",
    "fastapi-pagination>=0.15.11",
    "jose>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "cachetools>=7.0.5",
    "asyncache>=0.1.1",
    "python-jose[cryptography]>=3.5.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "uvicorn>=0.42.0",
    "python-multipart>=0.0.22",
    "bcrypt==4.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
    "mypy>=1.15.0",
    "types-cachetools>=6.2.0.20260317",
]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [".git", ".venv", "build", "dist", "alembic"]
src = ["src/backend"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "C4",
    "SIM",
]

ignore = [
    "B008",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
exclude = ["alembic/"]
